# QuickEcharts

./: .gitignore  Area.html  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
QuickEcharts/: Charts.py  Histogram.py  __init__.py  test_functions.py  tests.py
QuickEcharts/shiny_app/: __init__.py  app.py  output.html
QuickEcharts/shiny_app/modules/: __init__.py  schemas.py
QuickEcharts/shiny_app/www/: styles.css
